kubernetes/argocd/applications/clopus-watcher/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: clopus-watcher
  labels:
    app: clopus-watcher
