kubernetes/argocd/applications/clopus-watcher/dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: clopus-watcher
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
